testing card nav btm radius fix on mobile

--- a/components/card/_style.scss
+++ b/components/card/_style.scss
@@ -58,6 +58,7 @@ $profile-img-width: 105px;
   background-color: $color__border--light;
 }
 
+.card-nav--bottom,
 .card-nav--bottom > .row {
   background-color: $color__secondary;
   border-bottom-left-radius: $border-radius;
